--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Proyecto-Unity/Builds/
 Proyecto-Unity/Logs/
 Proyecto-Unity/MemoryCaptures/
 Proyecto-Unity/Recordings/
+Proyecto-Unity/UserSettings/
 
 # IDEs y archivos temporales
 Proyecto-Unity/.vs/
