--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ Proyecto-Unity/Assets/InitTestScene*.unity*
 # Archivos del sistema operativo
 .DS_Store
 Thumbs.db
+Proyecto-Unity/Compilation/AAB/EcoMisionAPP(Standalone).apk
