--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Proyecto-Unity/Assets/InitTestScene*.unity*
 .DS_Store
 Thumbs.db
 Proyecto-Unity/Compilation/AAB/EcoMisionAPP(Standalone).apk
+/Proyecto-Unity/Compilation
